--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#2C1810" />
     <meta name="description" content="Discover India's finest specialty coffee roasters - Browse 500+ beans from 30+ top roasters" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     
     <!-- SEO & Social Meta Tags -->
     <meta name="keywords" content="indian coffee, specialty coffee, coffee roasters india, blue tokai, corridor seven, bloom coffee" />
@@ -41,4 +44,3 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
