--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- Add Google Site Verification Meta Tag here -->
-    <!-- <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE" /> -->
+    <!-- <meta name="google-site-verification" content="FXrEGLRsbAe2Pcitv-9H-tgMnI9FxtAlibce7n5xO4Y" /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
