--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- Add Google Site Verification Meta Tag here -->
-     <meta name="google-site-verification" content="google-site-verification: googlec9115d0c762b34c6.html" />
+     <meta name="google-site-verification" content="7UFeXeXl2ZDb0axnHMxu6RKuOyhRo6EM3ZAZ0IuVVvQ" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
